// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleSearchComponent should have a proper style generator 1`] = `
Object {
  "inHeader": Object {
    "& input[type=\\"search\\"]::-webkit-search-cancel-button": Object {
      "display": "none",
    },
    "backgroundColor": "test2",
    "margin": "-4px",
    "width": "calc(100% + 8px)",
  },
  "mobileCloseButton": Object {
    "fill": "test1",
    "opacity": 0.5,
  },
  "mobileHeader": Object {
    "backgroundColor": "test2",
    "height": 70,
    "left": 0,
    "position": "absolute",
    "top": 0,
    "width": "100%",
    "zIndex": 100,
  },
  "mobileSearchInput": Object {
    "& > div": Object {
      "height": "100%",
    },
    "& input": Object {
      "fontSize": 24,
      "fontWeight": "test3",
      "lineHeight": 1.2,
      "overflow": "hidden",
      "textOverflow": "ellipsis",
    },
    "height": 70,
    "width": "99%",
  },
  "searchHeaderContainerPadding": Object {
    "&.MuiGrid-item": Object {
      "padding": "4px",
    },
  },
  "searchIconMobile": Object {
    "fill": "test2",
  },
  "searchIconPrefix": Object {
    "fill": "test1",
    "opacity": 0.66,
  },
}
`;

exports[`SimpleSearchComponent should render default view 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "margin": 8,
      }
    }
  >
    <ForwardRef(Grid)
      alignItems="center"
      container={true}
      spacing={2}
    >
      <ForwardRef(Grid)
        item={true}
        xs={true}
      >
        <TextField
          data-testid={true}
          errorText={null}
          fullWidth={true}
          inputProps={
            Object {
              "aria-label": "Enter your search query to search eSpace and then press Enter",
            }
          }
          label="Search eSpace"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder="Enter your search query to search all fields in eSpace"
          textFieldId="simple-search"
          type="search"
          value=""
        />
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          aria-label="Click to search eSpace"
          color="primary"
          data-analyticsid="simple-search-button"
          data-testid="simple-search-button"
          disabled={false}
          fullWidth={true}
          id="simple-search-button"
          onClick={[Function]}
          variant="contained"
        >
          Search
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          aria-label="Click to switch to Advanced search"
          className="advancedButton"
          color="default"
          data-analyticsid="show-advanced-search"
          data-testid="show-advanced-search"
          fullWidth={true}
          id="show-advanced-search"
          onClick={[Function]}
          variant="contained"
        >
          Advanced search
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </form>
</Fragment>
`;

exports[`SimpleSearchComponent should render mobile view 1`] = `null`;

exports[`SimpleSearchComponent should render show prefix icon in the search box 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "margin": 8,
      }
    }
  >
    <ForwardRef(Grid)
      alignItems="center"
      container={true}
      spacing={2}
    >
      <ForwardRef(Grid)
        item={true}
        xs={true}
      >
        <TextField
          data-testid={true}
          errorText={null}
          fullWidth={true}
          inputProps={
            Object {
              "aria-label": "Enter your search query to search eSpace and then press Enter",
            }
          }
          label="Search eSpace"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder="Enter your search query to search all fields in eSpace"
          textFieldId="simple-search"
          type="search"
          value=""
        />
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          aria-label="Click to search eSpace"
          color="primary"
          data-analyticsid="simple-search-button"
          data-testid="simple-search-button"
          disabled={false}
          fullWidth={true}
          id="simple-search-button"
          onClick={[Function]}
          variant="contained"
        >
          Search
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          aria-label="Click to switch to Advanced search"
          className="advancedButton"
          color="default"
          data-analyticsid="show-advanced-search"
          data-testid="show-advanced-search"
          fullWidth={true}
          id="show-advanced-search"
          onClick={[Function]}
          variant="contained"
        >
          Advanced search
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </form>
</Fragment>
`;

exports[`SimpleSearchComponent should render with a class "header" for use in AppBar 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "margin": 8,
      }
    }
  >
    <ForwardRef(Grid)
      alignItems="center"
      className={Object {}}
      container={true}
      direction="row"
      spacing={1}
      sx={
        Object {
          "display": Object {
            "sm": "flex",
            "xs": "none",
          },
        }
      }
      wrap="nowrap"
    >
      <ForwardRef(Grid)
        classes={
          Object {
            "item": undefined,
          }
        }
        item={true}
        xs={true}
      >
        <TextField
          InputProps={
            Object {
              "disableUnderline": true,
            }
          }
          autoComplete="search"
          errorText={null}
          fullWidth={true}
          label=""
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder="Search eSpace"
          textFieldId="simple-search"
          type="search"
          value=""
        />
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ForwardRef(Box)
      sx={
        Object {
          "display": Object {
            "sm": "none",
            "xs": "block",
          },
        }
      }
    >
      <ForwardRef(Tooltip)
        TransitionComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "addEndListener": [Function],
              "appear": [Function],
              "children": [Function],
              "easing": [Function],
              "in": [Function],
              "onEnter": [Function],
              "onEntered": [Function],
              "onEntering": [Function],
              "onExit": [Function],
              "onExited": [Function],
              "onExiting": [Function],
              "style": [Function],
              "timeout": [Function],
            },
            "render": [Function],
          }
        }
        TransitionProps={
          Object {
            "timeout": 300,
          }
        }
        placement="bottom-end"
        title="Search eSpace"
      >
        <ForwardRef(IconButton)
          aria-label="Click to search eSpace"
          onClick={[Function]}
          size="large"
        >
          <Memo(ForwardRef(SearchIcon)) />
        </ForwardRef(IconButton)>
      </ForwardRef(Tooltip)>
    </ForwardRef(Box)>
  </form>
</Fragment>
`;

exports[`SimpleSearchComponent should set search value from prop 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "margin": 8,
      }
    }
  >
    <ForwardRef(Grid)
      alignItems="center"
      container={true}
      spacing={2}
    >
      <ForwardRef(Grid)
        item={true}
        xs={true}
      >
        <TextField
          data-testid={true}
          errorText={null}
          fullWidth={true}
          inputProps={
            Object {
              "aria-label": "Enter your search query to search eSpace and then press Enter",
            }
          }
          label="Search eSpace"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder="Enter your search query to search all fields in eSpace"
          textFieldId="simple-search"
          type="search"
          value="i feel lucky"
        />
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          aria-label="Click to search eSpace"
          color="primary"
          data-analyticsid="simple-search-button"
          data-testid="simple-search-button"
          disabled={false}
          fullWidth={true}
          id="simple-search-button"
          onClick={[Function]}
          variant="contained"
        >
          Search
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <ForwardRef(Button)
          aria-label="Click to switch to Advanced search"
          className="advancedButton"
          color="default"
          data-analyticsid="show-advanced-search"
          data-testid="show-advanced-search"
          fullWidth={true}
          id="show-advanced-search"
          onClick={[Function]}
          variant="contained"
        >
          Advanced search
        </ForwardRef(Button)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </form>
</Fragment>
`;

exports[`SimpleSearchComponent should show prefix icon when in header 1`] = `null`;
